tidy up some spacing issue on org page headers

--- a/public/less/org-page.less
+++ b/public/less/org-page.less
@@ -64,7 +64,7 @@ body {
   width: 36px;
   height: auto;
   margin-right: 1.7rem;
-  margin-top: .5rem;
+  margin-top: 1.7rem;
   padding: .3rem;
   border-radius: .4rem;
   background-color: white;
@@ -80,6 +80,7 @@ body {
 
 .org-page__header-heading {
   margin-bottom: 1rem;
+  padding-top: 7px;
   font-size: 2.4rem;
   font-weight: 300;
 
